# Coursera_Bioinformatics

./: .gitignore  README.md  pyproject.toml
src/: task_1_2_0_hidden_message.py  task_1_2_1_frequent_words.py  task_1_3_0_reverse_complement.py  task_1_3_1_pattern_matching.py  task_1_4_0_find_clumps.py  week_1.py  week_2.py  week_3.py  week_4.py
src/course_1/: module_1.py  module_2.py  module_3.py  module_4.py  week_2.py  week_3.py  week_4.py
src/course_2/: module_1.py  module_2.py  module_3.py  module_4.py  week_1.py  week_2.py
src/course_3/: module_1.py  module_2.py  module_3.py  module_4.py  module_5.py
tests/: test_1_2.py  test_1_3.py  test_1_4.py  test_course_1_module_1.py  test_course_1_module_2.py  test_course_1_module_3.py  test_course_1_module_4.py  test_course_1_week_1.py  test_course_1_week_2.py  test_course_1_week_3.py  test_course_1_week_4.py  test_course_2_module_1.py  test_course_2_module_2.py  test_course_2_module_3.py  test_course_2_module_4.py  test_course_2_week_1.py  test_course_2_week_2.py  test_course_3_module_1.py  test_course_3_module_2.py  test_course_3_module_3.py  test_course_3_module_4.py  test_course_3_module_5.py  test_week_1.py  test_week_2.py  test_week_3.py  test_week_4.py
